--- a/css/main.css
+++ b/css/main.css
@@ -15,20 +15,33 @@ align-self: center;
   text-align:center;
 }
 
-.navigation{
-  display:inline-flex;
+.intro-text{
+  text-align:center;
 }
+
 .nav{
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items:baseline;
+  margin-top: 2.5em;
+  margin-left: auto;
+  margin-right: auto;
+  width: 85%;
 }
 
 .nav a{
-  display:block;
+  display:inline-block;
+  padding-left:2em;
 }
 
-header{
-  display:flex;
-  justify-content:space-between;
+nav{
+  position: fixed;
+   top: 0;
+   left: 0;
+   margin: auto;
+   width: 100%;
+   transition: top 0.4s;
+   z-index: 10000;
 }
 
 .project-name{
@@ -36,16 +49,21 @@ header{
     -webkit-text-fill-color: transparent;
 }
 
-.project-name:hover{
-  -webkit-text-stroke: 1px black;
+
+.project:hover .project-name{
+    -webkit-text-stroke: 1px black;
     -webkit-text-fill-color: black;
 }
-
 .works{
   height:100vh;
   position:relative;
+
 }
 
+.projects{
+  padding-top:10rem;
+  margin-left:2.5em;
+}
 
 .subtext{
   text-decoration:none;
@@ -79,7 +97,7 @@ header{
   width: 30%;
   position: absolute;
   z-index: -5;
-  top:25%;
+  top:55%;
   left: 80%;
   transform: translate(-50%, -45%);
   z-index: -100000;
