Created about page
created about.html

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -64,6 +64,10 @@ p{
   text-decoration:none;
 }
 
-nav a{
-  line-height: normal;
+.bio-intro{
+  font-family: Gatwick-Light;
+}
+
+.bio-body{
+  line-height:22px;
 }
