--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth;
+}
 .title{
   text-align:center;
 align-self: center;
@@ -54,7 +57,7 @@ nav{
     -webkit-text-stroke: 1px black;
     -webkit-text-fill-color: black;
 }
-.works{
+#works{
   height:100vh;
   position:relative;
 
@@ -101,4 +104,10 @@ nav{
   left: 80%;
   transform: translate(-50%, -45%);
   z-index: -100000;
+}
+
+.about{
+  padding-top:10rem;
+  margin-left:2.5em;
+  margin-right:2.5em;
 }
