--- a/css/fonts.css
+++ b/css/fonts.css
@@ -29,19 +29,25 @@
   color:black;
 }
 a{
-
+  font-family: Apercu-Regular;
   text-decoration:none;
+  color:black;
+  font-size: 13px;
+  letter-spacing:1px;
+  text-transform: uppercase;
 
 }
 h1{
   font-family: Gatwick-Bold;
-  font-size: 5vw;
+  font-size: 6vw;
+
 }
 
-h2{
+h2 a{
   font-family: Gatwick-Bold;
-  font-size: 2rem;
+  font-size: 2.5rem;
   text-decoration:none;
+  letter-spacing: 3px;
 }
 
 h3{
