--- a/css/main.css
+++ b/css/main.css
@@ -126,3 +126,12 @@ padding-top:2em;
 .footer-content a{
   padding-right:2em;
 }
+
+
+/* STYLEGUIDE */
+
+.element{
+  border: 1px solid black;
+  margin:1em 1em 1em 1em;
+  padding-left: 2em;
+}
