--- a/css/main.css
+++ b/css/main.css
@@ -34,8 +34,10 @@ align-self: center;
 
 .nav a{
   display:inline-block;
-  padding:0 20px;
+  padding:0 10px;
+  margin:0 10px;
   position: relative;
+  /* border:1px solid; */
 }
 .nav a:before, nav a:after {
   content: '';
