--- a/css/main.css
+++ b/css/main.css
@@ -34,10 +34,10 @@ align-self: center;
 
 .nav a{
   display:inline-block;
-  padding:0 10px;
-  margin:0 10px;
+  padding:0;
+  margin:0 20px;
   position: relative;
-  /* border:1px solid; */
+
 }
 .nav a:before, nav a:after {
   content: '';
@@ -147,17 +147,20 @@ nav{
 }
 .about-page{
   height:90vh;
+  width:60%;
 }
 .footer-content{
   display:flex;
   justify-content: center;
-
-padding-top:2em;
+  padding-top:2em;
   border-top: 0.5px solid black;
 }
 
 .footer-content a{
-  padding-right:2em;
+  padding-right:1em;
+  padding-left:1em;
+  font-size:10px;
+  text-align:center;
 }
 
 
@@ -167,4 +170,94 @@ padding-top:2em;
   border: 1px solid black;
   margin:1em 1em 1em 1em;
   padding-left: 2em;
+}
+
+/* CASE STUDIES */
+.case-studies{
+  padding-top:10%;
+  margin-left:5em;
+  margin-right: 2.5em;
+}
+
+.project-intro{
+  display:flex;
+}
+
+.role-tools{
+  display:flex;
+}
+
+.description{
+  width:40%;
+}
+.project-img{
+  display:block;
+  text-align:center;
+  /* justify-content: center; */
+  margin-left:5rem;
+  padding-left:3rem;
+  width:50%;
+}
+
+.intro-img{
+width:60%;
+}
+
+.center-text{
+  width:65%;
+  display:flex;
+  margin-left:auto;
+  margin-right:auto;
+  text-align:center;
+  justify-content:center;
+}
+.process-section{
+  padding-top:5em;
+
+}
+
+.center-title{
+    text-align:center;
+}
+.images{
+  display:flex;
+  width:75%;
+  margin-left:auto;
+  margin-right:auto;
+
+}
+.images img{
+  width:100%;
+}
+
+.pic{
+  margin-right:2em;
+}
+
+.art-direction{
+  padding-top:5em;
+}
+.art-content{
+  display:flex;
+}
+
+.art-pic{
+  width:80%;
+}
+
+.solutions{
+  margin-top:4em;
+  display:flex;
+  justify-content: space-between;
+}
+
+.solution-pic{
+  margin-left:1em;
+
+
+}
+
+.sol-pic{
+  width:100%;
+
 }
