--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,7 @@ nav{
   padding-left: 2em;
 }
 
+
 /* CASE STUDIES */
 .case-studies{
   padding-top:10%;
@@ -185,15 +186,23 @@ nav{
 
 .role-tools{
   display:flex;
+  border:1px solid;
+  padding:1em;
+  margin-bottom:2em;
 }
 
 .description{
-  width:40%;
+  width:50%;
+}
+
+.div-section{
+  padding-right: 2.5em;
 }
 .project-img{
   display:block;
   text-align:center;
-  /* justify-content: center; */
+align-content: center;
+align-items: center;
   margin-left:5rem;
   padding-left:3rem;
   width:50%;
@@ -203,22 +212,12 @@ nav{
 width:60%;
 }
 
-.center-text{
-  width:65%;
-  display:flex;
-  margin-left:auto;
-  margin-right:auto;
-  text-align:center;
-  justify-content:center;
-}
+
 .process-section{
   padding-top:5em;
 
 }
 
-.center-title{
-    text-align:center;
-}
 .images{
   display:flex;
   width:75%;
@@ -242,22 +241,74 @@ width:60%;
 }
 
 .art-pic{
-  width:80%;
+  width:100%;
 }
 
 .solutions{
   margin-top:4em;
   display:flex;
   justify-content: space-between;
+
 }
 
 .solution-pic{
   margin-left:1em;
+  flex-grow:2;
 
 
 }
 
 .sol-pic{
   width:100%;
+
+}
+
+
+.research-img{
+  display:flex;
+}
+
+.img-div{
+  width:100%;
+}
+
+.design-principles{
+  display:flex;
+}
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 800px) {
+  .project-intro{
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+  }
+
+  .intro-img{
+  width:100%;
+  }
+
+  .description{
+    width:100%;
+  }
+
+  .research-img{
+    flex-wrap: wrap;
+  }
+
+
+  .art-content{
+    flex-wrap:wrap;
+  }
+  .images{
+    flex-wrap:wrap;
+  }
+
+.solutions{
+  flex-wrap:wrap;
+}
+
+  .solution-pic{
+    flex-shrink: 2;
+  }
 
 }
