--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,25 @@
 html{
   scroll-behavior: smooth;
 }
+
+footer{
+  padding-bottom:0.5em;
+}
+
+
+
+/* .body{
+
+  color: #000;
+  background-color: #f4f4f4;
+  transition: background-color 1s ease;
+
+} */
+
+/* .color-blue {
+  background-color: #2F8FED;
+} */
+
 .title{
   text-align:center;
 align-self: center;
@@ -276,8 +295,23 @@ width:60%;
   display:flex;
 }
 
+.video{
+  overflow:hidden;
+     padding-bottom:56.25%;
+     position:relative;
+     height:0;
+
+}
+.video iframe {
+  position:absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* MEDIA QUERIES */
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
   .project-intro{
     flex-wrap: wrap;
     flex-direction: column-reverse;
@@ -310,5 +344,97 @@ width:60%;
   .solution-pic{
     flex-shrink: 2;
   }
+
+}
+
+
+@media only screen and (max-width: 500px){
+  .case-studies{
+  padding-top:30%;
+  padding-left:1em;
+  padding-right:1em;
+  margin:0;
+  }
+
+  .project-img{
+    margin-top:1em;
+    margin-left:auto;
+    margin-right:auto;
+    padding-left:0;
+
+  }
+
+  .art-pic{
+    text-align: center;
+    width:130%;
+  }
+
+.work-subtitle{
+  font-size:1.5em;
+}
+
+.nav{
+  flex-wrap:wrap;
+  text-align:center;
+  justify-content:center;
+  margin-top:1em;
+
+}
+
+.role-tools{
+  flex-wrap:wrap;
+}
+
+.design-principles{
+  flex-wrap:wrap;
+}
+}
+
+/* HOMEPAGE MEDIA QUERIES */
+@media only screen and (max-width: 500px) {
+
+.project-text{
+  width:100%;
+}
+
+.typographic-space:hover .image-hover{
+  display:none;
+
+ z-index: -100000;
+}
+.aral-sea:hover .image-hover{
+  display:none;
+   z-index: -100000;
+}
+
+.the-peak:hover .image-hover{
+  display:none;
+   z-index: -100000;
+}
+
+.project-name{
+  font-size:1.5rem;
+}
+
+.projects{
+  margin-left:1em;
+  margin-right:1em;
+}
+}
+
+
+@media only screen and (max-width: 500px) {
+.about-page{
+  width:100%;
+}
+.about{
+  padding-top:10rem;
+  margin-left:1em;
+  margin-right:1em;
+}
+
+.bio-intro{
+  font-size:1.5rem;
+}
 
 }
