--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 html{
   scroll-behavior: smooth;
 }
+
+
+
 .footer-style a{
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .footer-content{
   padding-bottom:0.5em;
@@ -204,14 +207,15 @@ nav{
 }
 .footer-content{
   display:flex;
-  justify-content:flex-start;
+  justify-content:center;
   padding-top:2em;
 
 }
 
 footer{
     border-top: 0.5px solid black;
-}
+    text-align:center;
+  }
 
 .footer-content a{
   margin-left: 1em;
@@ -233,10 +237,36 @@ footer{
 
 
 /* CASE STUDIES */
+.proj-header{
+    width:50%;
+}
+.proj-banner{
+align-content:center;
+align-items: center;
+display:flex;
+height:100vh;
+}
+
+.project-img{
+  display:block;
+  text-align:center;
+  align-content: center;
+  align-items: center;
+  /* margin-left:5rem;
+  padding-left:3rem; */
+  width:50%;
+}
+
+
 .case-studies{
-  padding-top:10%;
+  padding-top:3%;
   margin-left:5em;
   margin-right: 2.5em;
+}
+
+.content{
+  padding-left:20%;
+  padding-right:20%;
 }
 
 .project-intro{
@@ -251,26 +281,21 @@ footer{
 }
 
 .description{
-  width:50%;
+  width:100%;
 }
 
 .div-section{
   padding-right: 2.5em;
 }
-.project-img{
-  display:block;
-  text-align:center;
-align-content: center;
-align-items: center;
-  margin-left:5rem;
-  padding-left:3rem;
-  width:50%;
-}
+
 
 .intro-img{
 width:60%;
 }
 
+.conclusion{
+  padding-bottom:2em;
+}
 
 .process-section{
   padding-top:5em;
@@ -278,7 +303,7 @@ width:60%;
 }
 
 .images{
-  display:flex;
+  /* display:flex; */
   width:75%;
   margin-left:auto;
   margin-right:auto;
@@ -296,7 +321,7 @@ width:60%;
   padding-top:5em;
 }
 .art-content{
-  display:flex;
+  /* display:flex; */
 }
 
 .art-pic{
@@ -305,7 +330,9 @@ width:60%;
 
 .solutions{
   margin-top:4em;
-  display:flex;
+  /* padding-left:20%;
+  padding-right:20%; */
+  display:block;
   justify-content: space-between;
 
 }
@@ -324,7 +351,7 @@ width:60%;
 
 
 .research-img{
-  display:flex;
+  /* display:flex; */
 }
 
 .img-div{
@@ -359,6 +386,36 @@ width:60%;
 
 /* MEDIA QUERIES */
 @media only screen and (max-width: 1000px) {
+.case-studies{
+  padding-top:10%;
+}
+
+.content{
+  padding-left:10%;
+  padding-right:10%;
+}
+.proj-banner{
+  flex-wrap:wrap;
+  height:auto;
+}
+.banner-font{
+  text-align:center;
+}
+.proj-header{
+  width:100%;
+  margin-left:auto;
+  margin-right:auto;
+}
+.project-img{
+  display:block;
+  text-align:center;
+  align-content: center;
+  align-items: center;
+  width:70%;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:2em;
+}
   .project-intro{
     flex-wrap: wrap;
     flex-direction: column-reverse;
@@ -403,6 +460,28 @@ width:60%;
 
 @media only screen and (max-width: 550px){
   .case-studies{
+    padding-top:10%;
+  }
+
+  /* .banner-font{
+    font-size:2em;
+  } */
+  .proj-banner{
+    flex-wrap:wrap;
+    height:auto;
+  }
+  .content{
+    padding-left:10%;
+    padding-right:10%;
+  }
+
+.proj-header{
+  width:100%;
+}
+.project-img{
+  width:80%;
+}
+  .case-studies{
   padding-top:30%;
   padding-left:1em;
   padding-right:1em;
@@ -436,6 +515,7 @@ width:60%;
 
 .role-tools{
   flex-wrap:wrap;
+
 }
 
 .design-principles{
@@ -481,6 +561,8 @@ width:60%;
 
 }
 
+
+
 @media only screen and (max-width: 500px) {
 .about-page{
   width:100%;
@@ -499,4 +581,9 @@ width:60%;
   margin-left:1em;
   margin-right:1em;
 }
+}
+
+.footer-style{
+  display:flex;
+  justify-content: flex-start;
 }
